--- a/sistema-matriculas-front/package.json
+++ b/sistema-matriculas-front/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sistema-de-matriculas-vk",
+  "name": "teste-front",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "next": "15.0.2"
   },
   "devDependencies": {
