--- a/sistema-matriculas-front/package.json
+++ b/sistema-matriculas-front/package.json
@@ -6,21 +6,23 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "mock-api": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
+    "next": "15.0.2",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "next": "15.0.2"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.2",
+    "json-server": "^1.0.0-beta.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.2"
+    "typescript": "^5"
   }
 }
