--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@prisma/client": "^5.22.0",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
+    "mercadopago": "^2.0.15",
     "mongoose": "^8.8.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
