--- a/sistema-matriculas-front/package.json
+++ b/sistema-matriculas-front/package.json
@@ -9,18 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
+    "formik": "^2.4.6",
+    "next": "15.0.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "next": "15.0.2"
+    "react-hook-form": "^7.53.2",
+    "react-router-dom": "^7.0.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.2"
+    "typescript": "^5"
   }
 }
