--- a/sistema-matriculas-front/package.json
+++ b/sistema-matriculas-front/package.json
@@ -14,6 +14,7 @@
     "next": "15.0.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^7.0.2",
     "yup": "^1.5.0"
   },
   "devDependencies": {
